--- a/assessment-students.html
+++ b/assessment-students.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Assessment Students</title>
+  <title>New Assessment Table</title>
+  <meta charset="UTF-8" />
+  <style>
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background: #f0f0f0; }
+    select, input { width: 100%; }
+    button { margin-top: 15px; padding: 8px 12px; cursor: pointer; }
+  </style>
 </head>
 <body>
 
-<h2>Students for Assessment</h2>
+<h2>New Assessment Table</h2>
+
 <p><strong>Academic Year:</strong> <span id="yearLabel"></span></p>
+<p><strong>Class:</strong> <span id="classLabel"></span></p>
 <p><strong>Subject:</strong> <span id="subjectLabel"></span></p>
-<div id="studentList">Loading students...</div>
+
+<p>
+  <label>Term:</label>
+  <select id="termSelect"><option>Loading terms...</option></select>
+</p>
+
+<p>
+  <label>Strand(s):</label>
+  <input type="text" id="strandInput" placeholder="Enter strand(s)">
+</p>
+
+<p>
+  <label>Substrand (optional):</label>
+  <input type="text" id="substrandInput" placeholder="Enter substrand">
+</p>
+
+<table id="studentsTable">
+  <thead>
+    <tr>
+      <th>Adm/UPI Number</th>
+      <th>Name</th>
+      <th>Assessment Type</th>
+      <th>Performance Level</th>
+    </tr>
+  </thead>
+  <tbody id="studentsBody">
+    <tr><td colspan="4">Loading students...</td></tr>
+  </tbody>
+</table>
+
 <br>
-<button id="confirmStudents">Confirm Students</button>
+<button id="saveAssessment">Save Assessment</button>
 <p id="status"></p>
 
 <script type="module">
@@ -22,56 +60,98 @@ const supabase = createClient(
   "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
 );
 
+const SYSTEM_YEAR = 2026;
+document.getElementById("yearLabel").innerText = SYSTEM_YEAR;
+
+/* 0️⃣ Auth check */
 const { data: { user } } = await supabase.auth.getUser();
 if (!user) { window.location.href = "index.html"; throw new Error("Not logged in"); }
 
+/* 1️⃣ Get selected class & subject from previous page */
 const classId = localStorage.getItem("class_id");
 const subjectId = localStorage.getItem("subject_id");
-const academicYear = localStorage.getItem("academic_year");
+const academicYear = localStorage.getItem("academic_year") || SYSTEM_YEAR;
 
 if (!classId || !subjectId) {
   alert("Please select a class and subject first.");
   window.location.href = "teacher-dashboard.html";
 }
 
-document.getElementById("yearLabel").innerText = academicYear;
+/* Display class and subject */
+const { data: classData } = await supabase.from("classes").select("name").eq("id", classId).single();
+document.getElementById("classLabel").innerText = classData?.name || "N/A";
 
-// Load subject name
-const { data: subject } = await supabase
-  .from("subjects")
-  .select("name")
-  .eq("id", subjectId)
-  .single();
-document.getElementById("subjectLabel").innerText = subject?.name || "N/A";
+const { data: subjectData } = await supabase.from("subjects").select("name").eq("id", subjectId).single();
+document.getElementById("subjectLabel").innerText = subjectData?.name || "N/A";
 
-// Load students
-const { data: students } = await supabase
+/* 2️⃣ Load terms */
+const { data: terms } = await supabase.from("terms").select("id, name");
+const termSelect = document.getElementById("termSelect");
+termSelect.innerHTML = terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("");
+
+// 3️⃣ Load assessment types & levels
+const { data: assessmentTypes } = await supabase.from("assessment_types").select("id, name");
+const { data: levels } = await supabase.from("achievement_levels").select("id, label").order("order_rank");
+
+// 4️⃣ Load students for the selected class
+const { data: students, error: studentError } = await supabase
   .from("students")
-  .select("id, first_name, last_name, admission_number")
+  .select("id, admission_number, first_name, last_name")
   .eq("class_id", classId)
   .order("last_name");
 
-const studentList = document.getElementById("studentList");
-
-if (!students?.length) {
-  studentList.innerText = "No students found for this class.";
+const tbody = document.getElementById("studentsBody");
+if (studentError) {
+  tbody.innerHTML = `<tr><td colspan="4">Error loading students: ${studentError.message}</td></tr>`;
+} else if (!students?.length) {
+  tbody.innerHTML = `<tr><td colspan="4">No students in this class</td></tr>`;
 } else {
-  studentList.innerHTML = students.map(s => `
-    <label>
-      <input type="checkbox" value="${s.id}">
-      ${s.admission_number || ""} - ${s.first_name} ${s.last_name}
-    </label><br>
-  `).join("");
+  tbody.innerHTML = students.map(s => `
+<tr data-id="${s.id}">
+  <td>${s.admission_number || ""}</td>
+  <td>${s.first_name} ${s.last_name}</td>
+  <td>
+    <select class="assessmentType">
+      ${assessmentTypes.map(a=>`<option value="${a.id}">${a.name}</option>`).join("")}
+    </select>
+  </td>
+  <td>
+    <select class="performanceLevel">
+      <option value="">Select Level</option>
+      ${levels.map(l=>`<option value="${l.id}">${l.label}</option>`).join("")}
+    </select>
+  </td>
+</tr>
+`).join("");
 }
 
-document.getElementById("confirmStudents").onclick = () => {
-  const selected = Array.from(document.querySelectorAll("input[type=checkbox]:checked")).map(cb => cb.value);
-  if (!selected.length) {
-    document.getElementById("status").innerText = "Please select at least one student.";
-    return;
-  }
-  localStorage.setItem("selected_students", JSON.stringify(selected));
-  window.location.href = "new-assessment.html"; // Next step page
+// 5️⃣ Save assessment
+document.getElementById("saveAssessment").onclick = async () => {
+  const termId = termSelect.value;
+  const strand = document.getElementById("strandInput").value;
+  const substrand = document.getElementById("substrandInput").value;
+
+  const rows = Array.from(document.querySelectorAll("#studentsBody tr")).map(tr => {
+    const studentId = tr.dataset.id;
+    const assessmentTypeId = tr.querySelector(".assessmentType").value;
+    const performanceLevelId = tr.querySelector(".performanceLevel").value;
+    return {
+      assessment_id: null,
+      student_id: studentId,
+      subject_id: subjectId,
+      term_id: termId,
+      assessment_type_id: assessmentTypeId,
+      achievement_level_id: performanceLevelId,
+      strand,
+      substrand,
+      academic_year: academicYear,
+      teacher_id: user.id,
+      created_by: user.id
+    };
+  });
+
+  const { error } = await supabase.from("assessment_results").insert(rows);
+  document.getElementById("status").innerText = error ? `Error saving: ${error.message}` : "Assessment saved successfully!";
 };
 </script>
 </body>
