--- a/teacher.html
+++ b/teacher.html
@@ -28,9 +28,11 @@ const CURRENT_YEAR = 2026;
 const classListEl = document.getElementById("classList");
 
 async function loadDashboard() {
+  // 1️⃣ Get logged-in user
   const { data: { user } } = await supabase.auth.getUser();
   if (!user) { window.location.href = "index.html"; return; }
 
+  // 2️⃣ Get teacher profile
   const { data: profile } = await supabase
     .from("profiles")
     .select("id, role")
@@ -39,6 +41,7 @@ async function loadDashboard() {
 
   if (!profile || profile.role !== "teacher") { window.location.href = "index.html"; return; }
 
+  // 3️⃣ Load classes + subjects from the view
   const { data: assignments } = await supabase
     .from("teacher_subjects_view")
     .select("*")
@@ -50,16 +53,17 @@ async function loadDashboard() {
     return;
   }
 
+  // 4️⃣ Render dashboard cards
   classListEl.innerHTML = assignments.map(row => `
     <div class="card" data-year="${row.academic_year}">
       <strong>${row.class_name} - ${row.subject_name}</strong><br>
-      Grade: ${row.grade_number ?? "N/A"}<br>
       Academic Year: ${row.academic_year}<br>
       <button data-class="${row.class_id}" data-subject="${row.subject_id}">Start Assessment</button>
     </div>
   `).join("");
 }
 
+// ✅ Handle button click to carry selections forward
 classListEl.addEventListener("click", e => {
   if (e.target.tagName !== "BUTTON") return;
 
@@ -67,9 +71,8 @@ classListEl.addEventListener("click", e => {
   const subjectId = e.target.getAttribute("data-subject");
   const academicYear = e.target.closest(".card")?.getAttribute("data-year");
 
-  if (!classId || !subjectId) return alert("Invalid class or subject.");
+  if (!classId || !subjectId) return alert("Invalid class or subject selection.");
 
-  // ✅ Store selection to carry over
   localStorage.setItem("class_id", classId);
   localStorage.setItem("subject_id", subjectId);
   localStorage.setItem("academic_year", academicYear);
